code to run over different data modalities and perform cross-validation on them for different classifiers and store results

--- a/CS598JP-CourseProject.ipynb
+++ b/CS598JP-CourseProject.ipynb
@@ -10,7 +10,16 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy.io "
+    "import scipy.io\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegressionCV\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "import pickle\n"
    ]
   },
   {
@@ -244,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,11 +265,11 @@
     "factors = ['RID','Gender','Educ','Age','APOE','MMSE','DX']\n",
     "dx_stages = ['CN', 'AD']\n",
     "\n",
-    "mridf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"mri_001\"] != -1), factors+mri_vars]\n",
-    "amyloiddf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"amyloid_01\"] != -1), factors+amyloid_vars]\n",
-    "csfdf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"csf_01\"] != -1), factors+csf_vars]\n",
-    "fdgdf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"fdg_01\"] != -1), factors+fdg_vars]\n",
-    "petdf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"pet_01\"] != -1), factors+pet_vars]"
+    "mridf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"Educ\"] != -1) & (adnifulldf[\"mri_001\"] != -1), factors+mri_vars]\n",
+    "amyloiddf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"Educ\"] != -1) & (adnifulldf[\"amyloid_01\"] != -1), factors+amyloid_vars]\n",
+    "csfdf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"Educ\"] != -1) & (adnifulldf[\"csf_01\"] != -1), factors+csf_vars]\n",
+    "fdgdf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"Educ\"] != -1) & (adnifulldf[\"fdg_01\"] != -1), factors+fdg_vars]\n",
+    "petdf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"Educ\"] != -1) & (adnifulldf[\"pet_01\"] != -1), factors+pet_vars]"
    ]
   },
   {
@@ -319,6 +328,23 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3797 1116 1170 1789 1124\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(mridf), len(amyloiddf), len(csfdf), len(fdgdf), len(petdf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {
     "scrolled": true
    },
@@ -689,64 +715,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logistic_regression\n"
+      "Data modality is: amyloid\n",
+      "['amyloid_01', 'amyloid_02', 'amyloid_03', 'amyloid_04', 'amyloid_05', 'amyloid_06']\n",
+      "Classifier is: logistic_regression\n",
+      "['Gender', 'Educ', 'Age', 'APOE', 'amyloid_01', 'amyloid_02', 'amyloid_03', 'amyloid_04', 'amyloid_05', 'amyloid_06']\n",
+      "Classifier is: logistic_regression\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ksaboo/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:757: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data modality is: csf\n",
+      "['csf_01', 'csf_02', 'csf_03']\n",
+      "Classifier is: logistic_regression\n",
+      "['Gender', 'Educ', 'Age', 'APOE', 'csf_01', 'csf_02', 'csf_03']\n",
+      "Classifier is: logistic_regression\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegressionCV\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import f1_score\n",
-    "\n",
     "clf_list = ['logistic_regression','svm','random_forest']\n",
-    "\n",
     "svc_param_grid = {'C':np.logspace(-2,2,5), 'kernel':['linear'], 'degree':[2], 'gamma':[0.1, 1, 10]}\n",
     "rf_param_grid = {'n_estimators':np.arange(10,21,dtype=int), 'max_depth':np.arange(3,7,dtype=int)}\n",
     "clf_to_param_dict = {'logistic_regression':20, 'svm':svc_param_grid, 'random_forest':rf_param_grid}\n",
     "gs_num_cv = 4\n",
-    "outer_num_cv = 5\n",
-    "random_state_val = 1\n",
+    "outer_num_cv = 5 # NOTE CHANGE THIS TO 10\n",
+    "save_dir_path = '../Dataset/ProcessedFiles/'\n",
     "\n",
-    "amyloiddf_mod = amyloiddf.copy()\n",
-    "amyloiddf_mod['DX_bin'] = np.where(amyloiddf[\"DX\"]==\"CN\", 0, 1) # CN:0 , AD: 1\n",
-    "features = [item for sublist in [['Gender','Educ','Age'], amyloid_vars] for item in sublist]\n",
-    "grid_out_list = []\n",
+    "modality_list = ['amyloid','csf','fdg','pet']\n",
+    "factors = ['Gender','Educ','Age','APOE']\n",
+    "clinical_vars = ['Gender','Educ','Age','APOE','MMSE','DX']\n",
+    "dx_stages = ['CN', 'AD']\n",
     "\n",
-    "for clf_name in ['logistic_regression']:\n",
-    "    print(clf_name)\n",
-    "    for cvn in range(0, outer_num_cv):\n",
-    "        grid_out = ttSplitWithGridSearch(clf_name, clf_to_param_dict[clf_name], gs_num_cv, \n",
-    "                                      amyloiddf_mod, features, 'DX_bin', train_frac, cvn)\n",
-    "        grid_out_list.append(grid_out)\n"
+    "for modality in ['amyloid','csf']:\n",
+    "    print(\"Data modality is: \" + modality)\n",
+    "    modality_vars = [fieldname for fieldname in adnifulldf.columns if modality in fieldname] \n",
+    "    modalitydf = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"APOE\"] != -1) \n",
+    "                                & (adnifulldf[modality+'_01'] != -1), clinical_vars+modality_vars].copy()\n",
+    "    modalitydf['DX_bin'] = np.where(modalitydf[\"DX\"]==\"CN\", 0, 1) # CN:0 , AD: 1\n",
+    "\n",
+    "    for include_factors in [0,1]:\n",
+    "        if include_factors == 0: # do not include 'factors' in the features\n",
+    "            features = modality_vars\n",
+    "            save_fname = save_dir_path + clf_name +'_'+ modality+'_cv.pckl'\n",
+    "        else: # include \"factors\" on the features\n",
+    "            features = [item for sublist in [factors, modality_vars] for item in sublist]\n",
+    "            save_fname = save_dir_path + clf_name +'_'+ modality+'_factors_cv.pckl'\n",
+    "        \n",
+    "        print(features)\n",
+    "        for clf_name in ['logistic_regression']:\n",
+    "            print(\"Classifier is: \" + clf_name)\n",
+    "            grid_out_list = []\n",
+    "\n",
+    "            for cvn in range(0, outer_num_cv):\n",
+    "                grid_out = ttSplitWithGridSearch(clf_name, clf_to_param_dict[clf_name], gs_num_cv, \n",
+    "                                              modalitydf, features, 'DX_bin', train_frac, cvn)\n",
+    "                grid_out_list.append(grid_out)\n",
+    "\n",
+    "            pickle.dump(grid_out_list, open(save_fname, 'wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 142,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[82.58928571428571,\n",
-       " 88.83928571428571,\n",
-       " 85.71428571428571,\n",
-       " 82.58928571428571,\n",
-       " 85.71428571428571]"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
     }
    ],
    "source": [
-    "[grid_output['test_score']['accuracy'] for grid_output in grid_out_list]"
+    "# with open('../Dataset/ProcessedFiles/'+clf_name+'_amyloid_cv.pckl','wb') as handle:\n",
+    "#     pickle.dump(grid_out_list, handle)\n",
+    "\n",
+    "with open(,'rb') as handle:\n",
+    "    myout = pickle.load(handle)\n"
    ]
   },
   {
@@ -766,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 173,
    "metadata": {
     "scrolled": false
    },
@@ -776,7 +834,7 @@
     "\n",
     "    # select and train the model\n",
     "    if classifier_name.lower() == 'logistic_regression':\n",
-    "        mlmodel = LogisticRegressionCV(Cs=paramdict, cv=num_cv, max_iter=200)\n",
+    "        mlmodel = LogisticRegressionCV(Cs=paramdict, cv=num_cv, max_iter=500)\n",
     "        mlmodel.fit(train_X, train_Y)\n",
     "    \n",
     "    elif classifier_name.lower() == 'svm':\n",
@@ -837,23 +895,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "random_forest\n",
-      "K.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0    1035\n",
+       "1      78\n",
+       "Name: APOE, dtype: int64"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "batman = 'random_forest'\n",
-    "print(batman.lower())\n",
-    "if batman.lower() == 'random_forest':\n",
-    "    print('K.')"
+    "modalitydf.APOE.value_counts()"
    ]
   }
  ],
