added 'poly' to the params for SVM. print out features

--- a/CS598JP-CourseProject.ipynb
+++ b/CS598JP-CourseProject.ipynb
@@ -895,10 +895,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[81.62393162393163, 76.49572649572649, 82.90598290598291, 82.05128205128204, 78.63247863247864]\n",
+      "[80.76923076923077, 77.35042735042735, 83.33333333333334, 82.05128205128204, 78.63247863247864]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myout = pickle.load(open('../Dataset/ProcessedFiles/logistic_regression_csf_cv.pckl','rb'))\n",
+    "\n",
+    "print([gridout['test_score']['accuracy'] for gridout in myout])\n",
+    "\n",
+    "myout = pickle.load(open('../Dataset/ProcessedFiles/logistic_regression_csf_factors_cv.pckl','rb'))\n",
+    "\n",
+    "print([gridout['test_score']['accuracy'] for gridout in myout])"
+   ]
   },
   {
    "cell_type": "code",
