modified adniEnsemble and cvForModalities to perform standardization of features based on only training data. Re-running linear method experiments. Added validation functionality to DL code

--- a/CS598JP-CourseProject.ipynb
+++ b/CS598JP-CourseProject.ipynb
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
     }
    ],
    "source": [
-    "def plot_history(histories, key='binary_crossentropy'):\n",
+    "def plot_history(histories, key):\n",
     "  plt.figure(figsize=(16,10))\n",
     "    \n",
     "  for name, history in histories:\n",
@@ -730,15 +730,71 @@
     "  plt.xlim([0,max(history.epoch)])\n",
     "\n",
     "\n",
-    "plot_history([('baseline', dlmodel.history)], key='acc')"
+    "plot_history(histories=[('baseline', dlmodel.history)], key='acc')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "amyloiddf['DX_bin'] = np.where(amyloiddf[\"DX\"]==\"CN\", 0, 1)\n",
+    "features = [item for sublist in [['Gender','Age','Educ','APOE'], amyloid_vars] for item in sublist]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_X, test_X, train_Y, test_Y = train_test_split(\n",
+    "    amyloiddf[features], amyloiddf['DX_bin'], train_size=0.8, test_size=0.2,\n",
+    "    random_state=0, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gender        1.000044\n",
+      "Age           0.947217\n",
+      "Educ          0.969644\n",
+      "APOE          1.250293\n",
+      "amyloid_01    0.947716\n",
+      "amyloid_02    0.900736\n",
+      "amyloid_03    0.972888\n",
+      "amyloid_04    0.986007\n",
+      "amyloid_05    1.079427\n",
+      "amyloid_06    1.004542\n",
+      "dtype: float64\n",
+      "Gender        0.499898\n",
+      "Age           7.204899\n",
+      "Educ          2.659972\n",
+      "APOE          0.247146\n",
+      "amyloid_01    0.314005\n",
+      "amyloid_02    0.324637\n",
+      "amyloid_03    0.312845\n",
+      "amyloid_04    0.276639\n",
+      "amyloid_05    0.148476\n",
+      "amyloid_06    0.497561\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_list = np.mean(train_X, axis=0)\n",
+    "std_list = np.std(train_X, axis=0)\n",
+    "\n",
+    "print(np.std((test_X-mean_list)/std_list))\n",
+    "print(std_list)"
+   ]
   }
  ],
  "metadata": {
