bug fix in modalityModelTrainWrapper. Passing training data as test data to ensure both positive and negative samples are present in test data

--- a/Code/CS598JP-CourseProject.ipynb
+++ b/Code/CS598JP-CourseProject.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -738,78 +738,24 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 440 out of 440 | elapsed:    6.6s finished\n"
+      "[Parallel(n_jobs=1)]: Done 440 out of 440 | elapsed:    7.0s finished\n",
+      "/home/ksaboo/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_search.py:841: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
+      "  DeprecationWarning)\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=6, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=11, n_jobs=None,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
-       "            warm_start=False)"
-      ]
-     },
-     "execution_count": 163,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# train each modality - use the method which had best on average performance for each modality as evaluated in previous experiment\n",
-    "rf_param_grid = {'n_estimators':np.arange(10,21,dtype=int), 'max_depth':np.arange(3,7,dtype=int)}\n",
-    "# CSF classifier\n",
-    "csf_columns = [item for sublist in [['Gender','Age','Educ','APOE', 'DX_bin'], csf_vars] for item in sublist]\n",
-    "csf_features = [item for sublist in [['Gender','Age','Educ','APOE'], csf_vars] for item in sublist]\n",
-    "train_csfdf = training_df.loc[training_df[\"csf_01\"] !=-1, csf_columns]\n",
-    "\n",
-    "# perform parameter sweep for Random Forest classifier\n",
-    "gridout_csf = adens.ttSplitWithGridSearch('random_forest', rf_param_grid, gs_num_cv, \n",
-    "                                          train_csfdf, csf_features, 'DX_bin', train_frac, None)\n",
-    "\n",
-    "# make classifier with the parameters of the best model from grid search\n",
-    "csf_model = RandomForestClassifier(**gridout_csf['model'].get_params())\n",
-    "\n",
-    "# standardize training data\n",
-    "train_csf_mean = train_csfdf[csf_features].mean()\n",
-    "train_csf_std = train_csfdf[csf_features].std()\n",
-    "\n",
-    "# train model\n",
-    "csf_model.fit((train_csfdf[csf_features]-train_csf_mean/train_csf_std), train_csfdf['DX_bin'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 260,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 10 folds for each of 44 candidates, totalling 440 fits\n"
+     "ename": "IndexError",
+     "evalue": "index 1 is out of bounds for axis 0 with size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-271-f8657ceca552>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mgs_num_cv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcsfout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodalityModelTrainWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'random_forest'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'csf'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtraining_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgs_num_cv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0marbit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtesting_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtesting_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'csf_01'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcsf_columns\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcsfout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'model'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marbit\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcsfout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mcsfout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train_mod_mean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mcsfout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train_mod_std'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marbit\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'DX_bin'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-268-f24e53a48a09>\u001b[0m in \u001b[0;36mmodalityModelTrainWrapper\u001b[0;34m(classifier_name, modality_name, train_df, num_cv)\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;31m# perform parameter sweep for classifier and train model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     gridout = adens.gridSearchWrapper(classifier_name, param_grid, num_cv, train_X_zs, \n\u001b[0;32m---> 33\u001b[0;31m                                           train_modalitydf['DX_bin'], dummy_test_X, dummy_test_Y)\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     return {'model':gridout['model'], 'features':modality_features,\n",
+      "\u001b[0;32m/media/UIUC Courses/Sem 5/CS598JP/Project/Code/adniEnsemble.py\u001b[0m in \u001b[0;36mgridSearchWrapper\u001b[0;34m(classifier_name, paramdict, num_cv, train_X, train_Y, test_X, test_Y)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[0;31m# test model - test data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m     \u001b[0msensitivity_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspecificity_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSensiSpeci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_Y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmlmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_X\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m     \u001b[0maccuracy_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mmlmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_Y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0mf1_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_Y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmlmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_X\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/media/UIUC Courses/Sem 5/CS598JP/Project/Code/adniEnsemble.py\u001b[0m in \u001b[0;36mSensiSpeci\u001b[0;34m(true_labels, predicted_labels)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mSensiSpeci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrue_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mconfmat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrue_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0msensitivity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# TP/(FN+TP)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0mspecificity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# TN/(TN+FP)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msensitivity\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspecificity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 1"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 440 out of 440 | elapsed:    6.8s finished\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.7649122807017544"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -817,7 +763,7 @@
     "csfout = modalityModelTrainWrapper('random_forest', 'csf', training_df, gs_num_cv)\n",
     "\n",
     "arbit = testing_df.loc[(testing_df['csf_01']!=-1), csf_columns]\n",
-    "csfout['model'].score((arbit[csfout['features']]-csfout['train_modality_mean'])/csfout['train_modality_std'], arbit['DX_bin'])"
+    "csfout['model'].score((arbit[csfout['features']]-csfout['train_mod_mean'])/csfout['train_mod_std'], arbit['DX_bin'])"
    ]
   },
   {
@@ -876,62 +822,6 @@
    ],
    "source": [
     "amyloidout['model'].coef_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 230,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'bootstrap': True,\n",
-       " 'class_weight': None,\n",
-       " 'criterion': 'gini',\n",
-       " 'max_depth': 5,\n",
-       " 'max_features': 'auto',\n",
-       " 'max_leaf_nodes': None,\n",
-       " 'min_impurity_decrease': 0.0,\n",
-       " 'min_impurity_split': None,\n",
-       " 'min_samples_leaf': 1,\n",
-       " 'min_samples_split': 2,\n",
-       " 'min_weight_fraction_leaf': 0.0,\n",
-       " 'n_estimators': 10,\n",
-       " 'n_jobs': None,\n",
-       " 'oob_score': False,\n",
-       " 'random_state': None,\n",
-       " 'verbose': 0,\n",
-       " 'warm_start': False}"
-      ]
-     },
-     "execution_count": 230,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "csfout['model'].get_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 250,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 250,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "training_df.iloc[0].DX_bin"
    ]
   },
   {
